--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 
 # Build directories
 manuscript/build/
+manuscript/tex_build_archive/
+
+# Stray LaTeX outputs in source dirs
+manuscript/tex/*.pdf
 
 # Python
 __pycache__/
